--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
+    "mongoose": "^5.7.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
